overlap attempted fix

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ div{
 img{
   width: 25%;
   margin: 0 auto;
+  overflow: hidden;
 
 }
 /* .later-paragraph{
